// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsLoader - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="p-8 md:p-12 bg-white/10 rounded-lg flex-col justify-start items-start gap-12 inline-flex custom-loader"
>
  <div
    class="w-full flex flex-col gap-6"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="h-6 w-6 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
      <div
        class="h-8 w-48 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
    </div>
    <div
      class="h-6 w-full max-w-2xl bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
    />
    <div
      class="w-full p-6 bg-white/5 rounded-2xl flex-col gap-4 flex"
    >
      <div
        class="h-8 w-full bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
      <div
        class="h-8 w-full bg-foreground/10 rounded animate-pulse [animation-duration:1.5s] [animation-delay:0.1s]"
      />
      <div
        class="h-8 w-3/4 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s] [animation-delay:0.2s]"
      />
    </div>
  </div>
</div>
`;

exports[`SettingsLoader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="p-8 md:p-12 bg-white/10 rounded-lg flex-col justify-start items-start gap-12 inline-flex"
>
  <div
    class="w-full flex flex-col gap-6"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="h-6 w-6 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
      <div
        class="h-8 w-48 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
    </div>
    <div
      class="h-6 w-full max-w-2xl bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
    />
    <div
      class="w-full p-6 bg-white/5 rounded-2xl flex-col gap-4 flex"
    >
      <div
        class="h-8 w-full bg-foreground/10 rounded animate-pulse [animation-duration:1.5s]"
      />
      <div
        class="h-8 w-full bg-foreground/10 rounded animate-pulse [animation-duration:1.5s] [animation-delay:0.1s]"
      />
      <div
        class="h-8 w-3/4 bg-foreground/10 rounded animate-pulse [animation-duration:1.5s] [animation-delay:0.2s]"
      />
    </div>
  </div>
</div>
`;
